Removed application bundles for non-graphical example/test programs, fixed a number of build issues on Mac OS X.

--- a/examples/Makefile.cocoa
+++ b/examples/Makefile.cocoa
@@ -15,10 +15,10 @@ LFLAGS = $(LIB) -framework Cocoa -framework OpenGL
 
 # Default: Build all tests
 all: Triangle.app/Contents/MacOS/Triangle \
-     ListModes.app/Contents/MacOS/ListModes \
-     MTHello.app/Contents/MacOS/MTHello \
+     listmodes \
+     mthello \
      Pong3D.app/Contents/MacOS/Pong3D \
-     MTBench.app/Contents/MacOS/MTBench \
+     mtbench \
      Particles.app/Contents/MacOS/Particles \
      SplitView.app/Contents/MacOS/SplitView \
      Mipmaps.app/Contents/MacOS/Mipmaps \
@@ -30,22 +30,19 @@ Triangle.app/Contents/MacOS/Triangle: triangle.c $(LIB)
 	/bin/sh bundle.sh Triangle
 	$(CC) $(CFLAGS) triangle.c $(LFLAGS) -o Triangle.app/Contents/MacOS/Triangle
 
-ListModes.app/Contents/MacOS/ListModes: listmodes.c $(LIB)
-	/bin/sh bundle.sh ListModes
-	$(CC) $(CFLAGS) listmodes.c $(LFLAGS) -o ListModes.app/Contents/MacOS/ListModes
+listmodes: listmodes.c $(LIB)
+	$(CC) $(CFLAGS) listmodes.c $(LFLAGS) -o listmodes
 
-MTHello.app/Contents/MacOS/MTHello: mthello.c $(LIB)
-	/bin/sh bundle.sh MTHello
-	$(CC) $(CFLAGS) mthello.c $(LFLAGS) -o MTHello.app/Contents/MacOS/MTHello
+mthello: mthello.c $(LIB)
+	$(CC) $(CFLAGS) mthello.c $(LFLAGS) -o mthello
 
 Pong3D.app/Contents/MacOS/Pong3D: pong3d.c $(LIB)
 	/bin/sh bundle.sh Pong3D
 	cp pong3d_*.tga Pong3D.app/Contents/Resources/
 	$(CC) $(CFLAGS) pong3d.c $(LFLAGS) -o Pong3D.app/Contents/MacOS/Pong3D
 
-MTBench.app/Contents/MacOS/MTBench: mtbench.c $(LIB)
-	/bin/sh bundle.sh MTBench
-	$(CC) $(CFLAGS) mtbench.c $(LFLAGS) -o MTBench.app/Contents/MacOS/MTBench
+mtbench: mtbench.c $(LIB)
+	$(CC) $(CFLAGS) mtbench.c $(LFLAGS) -o mtbench
 
 Particles.app/Contents/MacOS/Particles: particles.c $(LIB)
 	/bin/sh bundle.sh Particles
@@ -73,6 +70,6 @@ Wave.app/Contents/MacOS/Wave: wave.c $(LIB)
 	$(CC) $(CFLAGS) wave.c $(LFLAGS) -o Wave.app/Contents/MacOS/Wave
 
 clean:
-	rm -rf Triangle.app ListModes.app MTHello.app Pong3D.app MTBench.app \
-		   Particles.app SplitView.app Mipmaps.app Gears.app Boing.app Wave.app
+	rm -rf Triangle.app listmodes mthello Pong3D.app mtbench Particles.app \
+	       SplitView.app Mipmaps.app Gears.app Boing.app Wave.app
 
