--- a/lib/carbon/Makefile.carbon.universal
+++ b/lib/carbon/Makefile.carbon.universal
@@ -20,9 +20,10 @@ all: libglfw.a
 ##########################################################################
 # Compiler settings
 ##########################################################################
-CC        = gcc
-FATFLAGS  = -isysroot /Developer/SDKs/MacOSX10.4u.sdk -arch ppc -arch i386
-CFLAGS    = -c -I. -I.. -Wall -O2 -fno-common $(FATFLAGS)
+CC       = gcc
+FATFLAGS = -isysroot /Developer/SDKs/MacOSX10.4u.sdk \
+		   -mmacosx-version-min=10.4 -arch ppc -arch i386
+CFLAGS   = -c -I. -I.. -Wall -O2 -fno-common $(FATFLAGS)
 
 
 ##########################################################################
