--- a/tests/Makefile.carbon.universal
+++ b/tests/Makefile.carbon.universal
@@ -1,5 +1,5 @@
 ##########################################################################
-# Makefile for GLFW test programs on Windows using Apple GCC.
+# Makefile for GLFW test programs on Mac OS X using Apple GCC.
 #-------------------------------------------------------------------------
 # To compile the test files using this makefile, run:
 #  make -f Makefile.carbon.universal
@@ -7,98 +7,65 @@
 
 # Compiler settings
 CC       = gcc
-FATFLAGS = -isysroot /Developer/SDKs/MacOSX10.4u.sdk -arch ppc -arch i386
+FATFLAGS = -isysroot /Developer/SDKs/MacOSX10.4u.sdk \
+		   -mmacosx-version-min=10.4 -arch ppc -arch i386
 CFLAGS   = -I../include $(FATFLAGS)
 
 # Linker settings
-LFLAGS = ../lib/carbon/libglfw.a -framework AGL -framework OpenGL -framework Carbon
+LIB    = ../lib/carbon/libglfw.a
+LFLAGS = $(LIB) -framework AGL -framework OpenGL -framework Carbon -m32
 
 # Default: Build all tests
-all: Triangle.app/Contents/MacOS/GLFWApplication \
-     ListModes.app/Contents/MacOS/GLFWApplication \
-     MTHello.app/Contents/MacOS/GLFWApplication \
-     Pong3D.app/Contents/MacOS/GLFWApplication \
-     MTBench.app/Contents/MacOS/GLFWApplication \
-     Particles.app/Contents/MacOS/GLFWApplication \
-     SplitView.app/Contents/MacOS/GLFWApplication \
-     Mipmaps.app/Contents/MacOS/GLFWApplication \
-     KeyTest.app/Contents/MacOS/GLFWApplication \
-     JoyTest.app/Contents/MacOS/GLFWApplication \
-     Gears.app/Contents/MacOS/GLFWApplication \
-     Boing.app/Contents/MacOS/GLFWApplication \
-     Wave.app/Contents/MacOS/GLFWApplication
+all: Accuracy.app/Contents/MacOS/Accuracy \
+     Defaults.app/Contents/MacOS/Defaults \
+     Events.app/Contents/MacOS/Events \
+     FSAA.app/Contents/MacOS/FSAA \
+     FSInput.app/Contents/MacOS/FSInput \
+     joysticks \
+     Peter.app/Contents/MacOS/Peter \
+     ReOpen.app/Contents/MacOS/ReOpen \
+     Tearing.app/Contents/MacOS/Tearing \
+     version
 
-# Rule for triangle
-Triangle.app/Contents/MacOS/GLFWApplication: triangle.c
-	/bin/sh bundle.sh Triangle
-	$(CC) $(CFLAGS) triangle.c $(LFLAGS) -o Triangle.app/Contents/MacOS/Triangle
+Accuracy.app/Contents/MacOS/Accuracy: accuracy.c $(LIB)
+	/bin/sh bundle.sh Accuracy
+	$(CC) $(CFLAGS) accuracy.c $(LFLAGS) -o Accuracy.app/Contents/MacOS/Accuracy
 
-# Rule for listmodes
-ListModes.app/Contents/MacOS/GLFWApplication: listmodes.c
-	/bin/sh bundle.sh ListModes
-	$(CC) $(CFLAGS) listmodes.c $(LFLAGS) -o ListModes.app/Contents/MacOS/ListModes
+Defaults.app/Contents/MacOS/Defaults: defaults.c $(LIB)
+	/bin/sh bundle.sh Defaults
+	$(CC) $(CFLAGS) defaults.c $(LFLAGS) -o Defaults.app/Contents/MacOS/Defaults
 
-# Rule for mthello
-MTHello.app/Contents/MacOS/GLFWApplication: mthello.c
-	/bin/sh bundle.sh MTHello
-	$(CC) $(CFLAGS) mthello.c $(LFLAGS) -o MTHello.app/Contents/MacOS/MTHello
+Events.app/Contents/MacOS/Events: events.c $(LIB)
+	/bin/sh bundle.sh Events
+	$(CC) $(CFLAGS) events.c $(LFLAGS) -o Events.app/Contents/MacOS/Events
 
-# Rule for pong3d
-Pong3D.app/Contents/MacOS/GLFWApplication: pong3d.c
-	/bin/sh bundle.sh Pong3D
-	cp pong3d_*.tga Pong3D.app/Contents/Resources/
-	$(CC) $(CFLAGS) pong3d.c $(LFLAGS) -o Pong3D.app/Contents/MacOS/Pong3D
+FSAA.app/Contents/MacOS/FSAA: fsaa.c $(LIB)
+	/bin/sh bundle.sh FSAA
+	$(CC) $(CFLAGS) fsaa.c $(LFLAGS) -o FSAA.app/Contents/MacOS/FSAA
 
-# Rule for mtbench
-MTBench.app/Contents/MacOS/GLFWApplication: mtbench.c
-	/bin/sh bundle.sh MTBench
-	$(CC) $(CFLAGS) mtbench.c $(LFLAGS) -o MTBench.app/Contents/MacOS/MTBench
+FSInput.app/Contents/MacOS/FSInput: fsinput.c $(LIB)
+	/bin/sh bundle.sh FSInput
+	$(CC) $(CFLAGS) fsinput.c $(LFLAGS) -o FSInput.app/Contents/MacOS/FSInput
 
-# Rule for particles
-Particles.app/Contents/MacOS/GLFWApplication: particles.c
-	/bin/sh bundle.sh Particles
-	$(CC) $(CFLAGS) particles.c $(LFLAGS) -o Particles.app/Contents/MacOS/Particles
+joysticks: joysticks.c $(LIB)
+	$(CC) $(CFLAGS) joysticks.c $(LFLAGS) -o joysticks
 
-# Rule for splitview
-SplitView.app/Contents/MacOS/GLFWApplication: splitview.c
-	/bin/sh bundle.sh SplitView
-	$(CC) $(CFLAGS) splitview.c $(LFLAGS) -o SplitView.app/Contents/MacOS/SplitView
+Peter.app/Contents/MacOS/Peter: peter.c $(LIB)
+	/bin/sh bundle.sh Peter
+	$(CC) $(CFLAGS) peter.c $(LFLAGS) -o Peter.app/Contents/MacOS/Peter
 
-# Rule for mipmaps
-Mipmaps.app/Contents/MacOS/GLFWApplication: mipmaps.c
-	/bin/sh bundle.sh Mipmaps
-	cp mipmaps.tga Mipmaps.app/Contents/Resources/
-	$(CC) $(CFLAGS) mipmaps.c $(LFLAGS) -o Mipmaps.app/Contents/MacOS/Mipmaps
+ReOpen.app/Contents/MacOS/ReOpen: reopen.c $(LIB)
+	/bin/sh bundle.sh ReOpen
+	$(CC) $(CFLAGS) reopen.c $(LFLAGS) -o ReOpen.app/Contents/MacOS/ReOpen
 
-# Rule for keytest
-KeyTest.app/Contents/MacOS/GLFWApplication: keytest.c
-	/bin/sh bundle.sh KeyTest
-	$(CC) $(CFLAGS) keytest.c $(LFLAGS) -o KeyTest.app/Contents/MacOS/KeyTest
+Tearing.app/Contents/MacOS/Tearing: tearing.c $(LIB)
+	/bin/sh bundle.sh Tearing
+	$(CC) $(CFLAGS) tearing.c $(LFLAGS) -o Tearing.app/Contents/MacOS/Tearing
 
-# Rule for joytest
-JoyTest.app/Contents/MacOS/GLFWApplication: joytest.c
-	/bin/sh bundle.sh JoyTest
-	$(CC) $(CFLAGS) joytest.c $(LFLAGS) -o JoyTest.app/Contents/MacOS/JoyTest
+version: version.c $(LIB)
+	$(CC) $(CFLAGS) version.c $(LFLAGS) -o version
 
-# Rule for gears
-Gears.app/Contents/MacOS/GLFWApplication: gears.c
-	/bin/sh bundle.sh Gears
-	$(CC) $(CFLAGS) gears.c $(LFLAGS) -o Gears.app/Contents/MacOS/Gears
-
-# Rule for boing
-Boing.app/Contents/MacOS/GLFWApplication: boing.c
-	/bin/sh bundle.sh Boing
-	$(CC) $(CFLAGS) boing.c $(LFLAGS) -o Boing.app/Contents/MacOS/Boing
-
-# Rule for wave
-Wave.app/Contents/MacOS/GLFWApplication: wave.c
-	/bin/sh bundle.sh Wave
-	$(CC) $(CFLAGS) wave.c $(LFLAGS) -o Wave.app/Contents/MacOS/Wave
-
-
-# Clean
 clean:
-	rm -rf JoyTest.app Triangle.app ListModes.app MTHello.app \
-	       Pong3D.app MTBench.app Particles.app SplitView.app \
-	       Mipmaps.app KeyTest.app Gears.app Boing.app Wave.app
+	rm -rf Accuracy.app Defaults.app Events.app FSAA.app FSInput.app \
+           joysticks Peter.app ReOpen.app Tearing.app version
 
