--- a/tests/Makefile.cocoa
+++ b/tests/Makefile.cocoa
@@ -21,11 +21,11 @@ all: Accuracy.app/Contents/MacOS/Accuracy \
      Events.app/Contents/MacOS/Events \
      FSAA.app/Contents/MacOS/FSAA \
      FSInput.app/Contents/MacOS/FSInput \
-     Joysticks.app/Contents/MacOS/Joysticks \
+     joysticks \
      Peter.app/Contents/MacOS/Peter \
      ReOpen.app/Contents/MacOS/ReOpen \
      Tearing.app/Contents/MacOS/Tearing \
-     Version.app/Contents/MacOS/Version
+     version
 
 Accuracy.app/Contents/MacOS/Accuracy: accuracy.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Accuracy
@@ -47,9 +47,8 @@ FSInput.app/Contents/MacOS/FSInput: fsinput.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh FSInput
 	$(CC) $(CFLAGS) fsinput.c $(LFLAGS) -o FSInput.app/Contents/MacOS/FSInput
 
-Joysticks.app/Contents/MacOS/Joysticks: joysticks.c $(LIB) $(HEADER)
-	/bin/sh bundle.sh Joysticks
-	$(CC) $(CFLAGS) joysticks.c $(LFLAGS) -o Joysticks.app/Contents/MacOS/Joysticks
+joysticks: joysticks.c $(LIB) $(HEADER)
+	$(CC) $(CFLAGS) joysticks.c $(LFLAGS) -o joysticks
 
 Peter.app/Contents/MacOS/Peter: peter.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Peter
@@ -63,11 +62,10 @@ Tearing.app/Contents/MacOS/Tearing: tearing.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Tearing
 	$(CC) $(CFLAGS) tearing.c $(LFLAGS) -o Tearing.app/Contents/MacOS/Tearing
 
-Version.app/Contents/MacOS/Version: version.c $(LIB) $(HEADER)
-	/bin/sh bundle.sh Version
-	$(CC) $(CFLAGS) version.c $(LFLAGS) -o Version.app/Contents/MacOS/Version
+version: version.c $(LIB) $(HEADER)
+	$(CC) $(CFLAGS) version.c $(LFLAGS) -o version
 
 clean:
 	rm -rf Accuracy.app Defaults.app Events.app FSAA.app FSInput.app \
-           Joysticks.app Peter.app ReOpen.app Tearing.app Version.app
+           joysticks Peter.app ReOpen.app Tearing.app version
 
