--- a/tests/Makefile.win32.cross-mgw
+++ b/tests/Makefile.win32.cross-mgw
@@ -17,7 +17,8 @@ WINDOWS = -mwindows -e _mainCRTStartup
 CONSOLE = -mconsole
 
 BINARIES = accuracy.exe defaults.exe events.exe fsaa.exe fsinput.exe \
-           joysticks.exe peter.exe reopen.exe tearing.exe version.exe
+           iconify.exe joysticks.exe peter.exe reopen.exe tearing.exe \
+           version.exe
 
 HEADER = ../include/GL/glfw.h
 
@@ -37,6 +38,9 @@ fsaa.exe: fsaa.c $(LIB) $(HEADER)
 
 fsinput.exe: fsinput.c $(LIB) $(HEADER)
 	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) fsinput.c $(LFLAGS) -o $@
+
+iconify.exe: iconify.c getopt.c $(LIB) $(HEADER)
+	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) iconify.c getopt.c $(LFLAGS) -o $@
 
 joysticks.exe: joysticks.c $(LIB) $(HEADER)
 	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) joysticks.c $(LFLAGS) -o $@
