--- a/examples/Makefile.win32.cygwin
+++ b/examples/Makefile.win32.cygwin
@@ -15,7 +15,8 @@ WINDOWS = -mwindows -e _mainCRTStartup
 CONSOLE = -mconsole
 
 BINARIES = triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
-		   particles.exe splitview.exe mipmaps.exe gears.exe boing.exe wave.exe
+		   particles.exe splitview.exe mipmaps.exe gears.exe boing.exe \
+		   wave.exe heightmap.exe
 
 all: $(BINARIES)
 
@@ -51,6 +52,12 @@ boing.exe: boing.c $(LIB)
 
 wave.exe: wave.c $(LIB)
 	$(CC) $(CFLAGS) $(WINDOWS) wave.c $(LFLAGS) -o $@
+
+heightmap.exe: heightmap.c $(LIB)
+	$(CC) $(CFLAGS) $(WINDOWS) heightmap.c $(LFLAGS) -o $@
+
+
+
 
 clean:
 	rm -f $(BINARIES)
