--- a/examples/Makefile.win32.ow
+++ b/examples/Makefile.win32.ow
@@ -21,7 +21,8 @@ CONSOLE = -"RUNTIME console REFERENCE _cstart_ OPTION { START=_cstart_ quiet sta
 
 # Default: Build all tests
 all: triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
-	particles.exe splitview.exe mipmaps.exe gears.exe boing.exe wave.exe
+	particles.exe splitview.exe mipmaps.exe gears.exe boing.exe \
+	wave.exe heightmap.exe
 
 
 # Rule for triangle
@@ -68,3 +69,6 @@ boing.exe: boing.c
 wave.exe: wave.c
 	$(CC) $(CFLAGS) /Fe$@ wave.c $(LFLAGS) $(WINDOWS)
 
+# Rule for heightmap
+heightmap.exe: heightmap.c
+	$(CC) $(CFLAGS) /Fe$@ heightmap.c $(LFLAGS) $(WINDOWS)
