Refresh of shared and X11 code from 2.7.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,13 +64,31 @@ if (UNIX AND NOT APPLE AND NOT CYGWIN)
 
     # Check for xf86vidmode (fallback legacy resolution switching extension)
     if (NOT X11_XRANDR_FOUND)
-	CHECK_X11_XF86VIDMODE()
-	if (X11_XF86VIDMODE_FOUND)
-	    set(_GLFW_HAS_XF86VIDMODE 1)
-	    list(APPEND GLFW_INCLUDE_DIR ${X11_XF86VIDMODE_INCLUDE_DIR})
-	    list(APPEND GLFW_LIBRARIES ${X11_XF86VIDMODE_LIBRARIES})
-	endif(X11_XF86VIDMODE_FOUND) 
+        CHECK_X11_XF86VIDMODE()
+        if (X11_XF86VIDMODE_FOUND)
+            set(_GLFW_HAS_XF86VIDMODE 1)
+            list(APPEND GLFW_INCLUDE_DIR ${X11_XF86VIDMODE_INCLUDE_DIR})
+            list(APPEND GLFW_LIBRARIES ${X11_XF86VIDMODE_LIBRARIES})
+        endif(X11_XF86VIDMODE_FOUND) 
     endif (NOT X11_XRANDR_FOUND)
+
+    CHECK_FUNCTION_EXISTS(glXGetProcAddress _GLFW_HAS_GLXGETPROCADDRESS)
+
+    if (NOT _GLFW_HAS_GLXGETPROCADDRESS)
+        CHECK_FUNCTION_EXISTS(glXGetProcAddressARB _GLFW_HAS_GLXGETPROCADDRESSARB)
+    endif (NOT _GLFW_HAS_GLXGETPROCADDRESS)
+
+    if (NOT _GLFW_HAS_GLXGETPROCADDRESS AND NOT _GLFW_HAS_GLXGETPROCADDRESSARB)
+        CHECK_FUNCTION_EXISTS(glXGetProcAddressEXT _GLFW_HAS_GLXGETPROCADDRESSEXT)
+    endif (NOT _GLFW_HAS_GLXGETPROCADDRESS AND NOT _GLFW_HAS_GLXGETPROCADDRESSARB)
+
+    if (NOT _GLFW_HAS_GLXGETPROCADDRESS AND
+        NOT _GLFW_HAS_GLXGETPROCADDRESSARB AND
+        NOT _GLFW_HAS_GLXGETPROCADDRESSEXT)
+        message(WARNING "No glXGetProcAddressXXX variant found")
+    endif (NOT _GLFW_HAS_GLXGETPROCADDRESS AND
+           NOT _GLFW_HAS_GLXGETPROCADDRESSARB AND
+           NOT _GLFW_HAS_GLXGETPROCADDRESSEXT)
 
     # Select platform specific code
     add_subdirectory(lib/x11)
