--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,13 +23,13 @@ endif(APPLE)
 
 if(MSVC)
   # Tell MSVC to use main instead of WinMain for Windows subsystem executables
-  set_target_properties(accuracy events fsaa peter reopen tearing version PROPERTIES LINK_FLAGS "/ENTRY:mainCRTStartup")
+  set_target_properties(accuracy defaults events fsaa peter reopen tearing version PROPERTIES LINK_FLAGS "/ENTRY:mainCRTStartup")
 endif(MSVC)
 
 if(CYGWIN)
   # Set cross-compile and subsystem compile and link flags
-  set_target_properties(accuracy events fsaa peter reopen tearing version PROPERTIES COMPILE_FLAGS "-mno-cygwin")
+  set_target_properties(accuracy defaults events fsaa peter reopen tearing version PROPERTIES COMPILE_FLAGS "-mno-cygwin")
   set_target_properties(accuracy fsaa tearing PROPERTIES LINK_FLAGS "-mno-cygwin -mwindows")
-  set_target_properties(events peter reopen version joytest PROPERTIES LINK_FLAGS "-mno-cygwin -mconsole")
+  set_target_properties(events defaults peter reopen version joytest PROPERTIES LINK_FLAGS "-mno-cygwin -mconsole")
 endif(CYGWIN)
 
