--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include ${OPENGL_INCLUDE_DIR}
 
 add_executable(defaults defaults.c)
 add_executable(events events.c)
+add_executable(joysticks joysticks.c)
 add_executable(peter peter.c)
 add_executable(reopen reopen.c)
 add_executable(version version.c)
@@ -28,8 +29,8 @@ endif(MSVC)
 
 if(CYGWIN)
   # Set cross-compile and subsystem compile and link flags
-  set_target_properties(accuracy defaults events fsaa peter reopen tearing version PROPERTIES COMPILE_FLAGS "-mno-cygwin")
+  set_target_properties(accuracy defaults events fsaa joysticks peter reopen tearing version PROPERTIES COMPILE_FLAGS "-mno-cygwin")
   set_target_properties(accuracy fsaa tearing PROPERTIES LINK_FLAGS "-mno-cygwin -mwindows")
-  set_target_properties(events defaults peter reopen version joytest PROPERTIES LINK_FLAGS "-mno-cygwin -mconsole")
+  set_target_properties(events defaults joysticks peter reopen version PROPERTIES LINK_FLAGS "-mno-cygwin -mconsole")
 endif(CYGWIN)
 
