--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 project(GLFW C)
 set(GLFW_VERSION_MAJOR "2")
 set(GLFW_VERSION_MINOR "7")
-set(GLFW_VERSION_MICRO "0")
+set(GLFW_VERSION_PATCH "0")
 set(GLFW_VERSION_EXTRA "")
 set(GLFW_VERSION "${GLFW_VERSION_MAJOR}.${GLFW_VERSION_MINOR}")
 set(GLFW_VERSION_FULL  
-    "${GLFW_VERSION}.${GLFW_VERSION_MICRO}${GLFW_VERSION_EXTRA}")
+    "${GLFW_VERSION}.${GLFW_VERSION_PATCH}${GLFW_VERSION_EXTRA}")
 
 
 cmake_minimum_required(VERSION 2.4)
