--- a/lib/win32/Makefile.win32.cygwin
+++ b/lib/win32/Makefile.win32.cygwin
@@ -19,7 +19,7 @@ VERMINOR = 7
 ##########################################################################
 CC         = gcc
 CFLAGS     = -c -I. -I.. -Wall -mwin32 -mno-cygwin -O2
-CFLAGS_DLL = $(CFLAGS) -mdll -DGLFW_BUILD_DLL
+CFLAGS_DLL = $(CFLAGS) -mdll -DGLFW_BUILD_DLL -D_GLFW_NO_DLOAD_GDI32 -D_GLFW_NO_DLOAD_WINMM
 
 HEADERS = ../../include/GL/glfw.h ../internal.h platform.h
 
@@ -33,7 +33,7 @@ LIBFLAGS = -rcs
 # DLL
 LINK      = gcc
 LINKFLAGS = -shared -s -mno-cygwin -Wl,--kill-at,--major-image-version,$(VERMAJOR),--minor-image-version,$(VERMINOR)
-LINKLIBS  = -lopengl32
+LINKLIBS  = -lopengl32 -lwinmm -lgdi32
 
 SED         = sed
 INSTALL     = install
