Added dynamic linking test to makefiles.

--- a/tests/Makefile.cocoa
+++ b/tests/Makefile.cocoa
@@ -10,14 +10,17 @@ CC     ?= cc
 CFLAGS = -I../include
 
 # Linker settings
-LIB    = ../lib/cocoa/libglfw.a
-LFLAGS = $(LIB) -framework Cocoa -framework OpenGL
+LIB       = ../lib/cocoa/libglfw.a
+SOLIB     = ../lib/cocoa/libglfw.dylib
+LFLAGS    = $(LIB) -framework Cocoa -framework OpenGL
+SO_LFLAGS = $(SOLIB) -framework OpenGL
 
 HEADER = ../include/GL/glfw.h
 
 # Default: Build all tests
 all: Accuracy.app/Contents/MacOS/Accuracy \
      defaults \
+     Dynamic.app/Contents/MacOS/Dynamic \
      Events.app/Contents/MacOS/Events \
      FSAA.app/Contents/MacOS/FSAA \
      FSInput.app/Contents/MacOS/FSInput \
@@ -34,6 +37,10 @@ Accuracy.app/Contents/MacOS/Accuracy: accuracy.c $(LIB) $(HEADER)
 
 defaults: defaults.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) defaults.c $(LFLAGS) -o defaults
+
+Dynamic.app/Contents/MacOS/Dynamic: dynamic.c $(SOLIB) $(HEADER)
+	/bin/sh bundle.sh Dynamic
+	$(CC) $(CFLAGS) dynamic.c $(SO_LFLAGS) -o Dynamic.app/Contents/MacOS/Dynamic
 
 Events.app/Contents/MacOS/Events: events.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Events
@@ -70,6 +77,6 @@ version: version.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) version.c $(LFLAGS) -o version
 
 clean:
-	rm -rf Accuracy.app defaults Events.app FSAA.app FSInput.app \
+	rm -rf Accuracy.app defaults Dynamic.app Events.app FSAA.app FSInput.app \
            Iconify.app joysticks Peter.app ReOpen.app Tearing.app version
 
