--- a/tests/Makefile.win32.cross-mgw
+++ b/tests/Makefile.win32.cross-mgw
@@ -10,15 +10,17 @@ TARGET ?= i586-mingw32msvc-
 CC     = gcc
 CFLAGS = -I../include -Wall -O2
 
-LIB    = ../lib/win32/libglfw.a
-LFLAGS = $(LIB) -lglu32 -lopengl32 
+LIB       = ../lib/win32/libglfw.a
+SOLIB     = ../lib/win32/libglfwdll.a
+LFLAGS    = $(LIB) -lglu32 -lopengl32
+SO_LFLAGS = $(SOLIB) -lglu32 -lopengl32
 
 WINDOWS = -mwindows -e _mainCRTStartup
 CONSOLE = -mconsole
 
-BINARIES = accuracy.exe defaults.exe events.exe fsaa.exe fsinput.exe \
-           iconify.exe joysticks.exe peter.exe reopen.exe tearing.exe \
-           version.exe
+BINARIES = accuracy.exe defaults.exe dynamic.exe events.exe fsaa.exe \
+	   fsinput.exe iconify.exe joysticks.exe peter.exe reopen.exe \
+	   tearing.exe version.exe
 
 HEADER = ../include/GL/glfw.h
 
@@ -29,6 +31,9 @@ accuracy.exe: accuracy.c $(LIB) $(HEADER)
 
 defaults.exe: defaults.c $(LIB) $(HEADER)
 	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) defaults.c $(LFLAGS) -o $@
+
+dynamic.exe: dynamic.c $(SOLIB) $(HEADER)
+	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) dynamic.c $(SO_LFLAGS) -o $@
 
 events.exe: events.c $(LIB) $(HEADER)
 	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) events.c $(LFLAGS) -o $@
