--- a/tests/Makefile.cocoa
+++ b/tests/Makefile.cocoa
@@ -40,6 +40,7 @@ defaults: defaults.c $(LIB) $(HEADER)
 
 Dynamic.app/Contents/MacOS/Dynamic: dynamic.c $(SOLIB) $(HEADER)
 	/bin/sh bundle.sh Dynamic
+	cp $(SOLIB) Dynamic.app/Contents/MacOS/
 	$(CC) $(CFLAGS) dynamic.c $(SO_LFLAGS) -o Dynamic.app/Contents/MacOS/Dynamic
 
 Events.app/Contents/MacOS/Events: events.c $(LIB) $(HEADER)
