Replaced Cygwin with MSYS.

--- a/examples/Makefile.win32.msys
+++ b/examples/Makefile.win32.msys
@@ -15,49 +15,48 @@ WINDOWS = -mwindows -e _mainCRTStartup
 CONSOLE = -mconsole
 
 BINARIES = triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
-		   particles.exe splitview.exe mipmaps.exe gears.exe boing.exe \
-		   wave.exe heightmap.exe
+           particles.exe splitview.exe mipmaps.exe gears.exe boing.exe \
+           wave.exe heightmap.exe
+
+HEADER = ../include/GL/glfw.h
 
 all: $(BINARIES)
 
-triangle.exe: triangle.c $(LIB)
+triangle.exe: triangle.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(WINDOWS) triangle.c $(LFLAGS) -o $@
 
-listmodes.exe: listmodes.c $(LIB)
+listmodes.exe: listmodes.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(CONSOLE) listmodes.c $(LFLAGS) -o $@
 
-mthello.exe: mthello.c $(LIB)
+mthello.exe: mthello.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(CONSOLE) mthello.c $(LFLAGS) -o $@
 
-pong3d.exe: pong3d.c $(LIB)
+pong3d.exe: pong3d.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(WINDOWS) pong3d.c $(LFLAGS) -o $@
 
-mtbench.exe: mtbench.c $(LIB)
+mtbench.exe: mtbench.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(CONSOLE) mtbench.c $(LFLAGS) -o $@
 
-particles.exe: particles.c $(LIB)
+particles.exe: particles.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(CONSOLE) particles.c $(LFLAGS) -o $@
 
-splitview.exe: splitview.c $(LIB)
+splitview.exe: splitview.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(WINDOWS) splitview.c $(LFLAGS) -o $@
 
-mipmaps.exe: mipmaps.c $(LIB)
+mipmaps.exe: mipmaps.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(WINDOWS) mipmaps.c $(LFLAGS) -o $@
 
-gears.exe: gears.c $(LIB)
+gears.exe: gears.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(WINDOWS) gears.c $(LFLAGS) -o $@
 
-boing.exe: boing.c $(LIB)
+boing.exe: boing.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(WINDOWS) boing.c $(LFLAGS) -o $@
 
-wave.exe: wave.c $(LIB)
+wave.exe: wave.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(WINDOWS) wave.c $(LFLAGS) -o $@
 
-heightmap.exe: heightmap.c getopt.c $(LIB)
+heightmap.exe: heightmap.c getopt.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(WINDOWS) heightmap.c getopt.c $(LFLAGS) -o $@
-
-
-
 
 clean:
 	rm -f $(BINARIES)
