Added example and test project files for Visual C++ 2010.

--- a/support/msvc100/GLFWDLL.vcxproj
+++ b/support/msvc100/GLFWDLL.vcxproj
@@ -69,10 +69,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <TargetName>GLFW</TargetName>
+    <IntDir>$(Configuration)DLL\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <TargetName>GLFW</TargetName>
+    <IntDir>$(Configuration)DLL\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
